be a good person, add alt tags

--- a/src/posts/2018-05-08a.md
+++ b/src/posts/2018-05-08a.md
@@ -10,22 +10,22 @@ Activists brought the demand for H&M to fulfil the living wage commitment to Sto
 
 \#TurnAroundHM activists getting everything ready for the day of action in Stockholm. They were equipped with posters and handouts that included some of the many comments added to the petition.
 
-![](sh2.jpg)
+![Activists at H&M annual shareholder meeting](sh2.jpg)
 
 First stop: H&M's annual shareholder meeting. Many shareholders walked away with food for thought in the form of our handouts that summarized H&M's promise, the current situation and our key demands.
 
-![](sh3.png)
+![Media showing interest](sh3.png)
 
-Apart from the attending shareholders, multiple media outlets also showed an interest in the action, so the demand for H&M to keep its living wage promise is getting an ever wider audience. 
+Apart from the attending shareholders, multiple media outlets also showed an interest in the action, so the demand for H&M to keep its living wage promise is getting an ever wider audience.
 
-![](sh4.jpg)
+![Informing shoppers of H&M action](sh4.jpg)
 
 Next stop: center of Stockholm, so shoppers were also made aware of H&M's unmet promise. Again, nobody could miss the action, and many people accepted the handouts with further information.
 
-![](sh5.jpg)
+![Activists in front of H&M store](sh5.jpg)
 
 \#TurnAroundHM activists moved on to another H&M store, making sure word of the living wage promise spreads far and wide. Passers-by of all ages showed an interest in the action and H&M's unfulfilled commitment.
 
-![](sh6.jpg)
+![Activists at the H&M headquarters](sh6.jpg)
 
-Finally, \#TurnAroundHM activists turned up at H&M's head office. We hope that the company's top ranks got the message: You promised workers a living wage by 2018, and we will not let that be forgotten. 
+Finally, \#TurnAroundHM activists turned up at H&M's head office. We hope that the company's top ranks got the message: You promised workers a living wage by 2018, and we will not let that be forgotten.
